misc updates and changes.

--- a/edu.uwb.opensubspace/.classpath
+++ b/edu.uwb.opensubspace/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="library/jsc.jar"/>
 	<classpathentry kind="lib" path="library/vecmath.jar"/>
 	<classpathentry kind="lib" path="library/weka.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
